sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:5: error: not found: value getNombreValeur
  for (a<-0 to getNombreValeur()-1){
               ^AlgInsertionSort:8: error: not found: value echaneg
      echaneg(j,j-1)
      ^